# nautical-navigator

./: Cargo.toml  README.md
src/: app.rs  args.rs  consts.rs  error.rs  log.rs  main.rs  position.rs
src/commands/: debug.rs  devices.rs  mod.rs  run.rs
src/iso_8211/: data_descriptive_record.rs  data_record.rs  error.rs  leader.rs  mod.rs  parser.rs
src/misc/: average.rs  delayed.rs  mod.rs  nullable.rs  parser.rs
src/nmea_0183/: coordinate.rs  error.rs  faa_mode.rs  geographic_position.rs  mod.rs  parser.rs  time.rs
src/nmea_0183/packets/: active_satellites.rs  geographic_position.rs  ground_speed.rs  mod.rs  satellites_in_view.rs  text.rs
src/nmea_0183/stores/: location.rs  mod.rs  satellites.rs
