[package]
name = "nautical-navigator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atoi = "2.0.0"
clap = { version = "4.4.18", features = ["derive"] }
eframe = "0.25.0"
egui = "0.25.0"
parking_lot = "0.12.1"
serialport = "4.3.0"
thiserror = "1.0.56"
